--- a/src/styles/productCard.css
+++ b/src/styles/productCard.css
@@ -28,8 +28,7 @@
 
 .product-image-wrapper {
     width: 90%;
-    height: 90%;
-    /* border: 2px solid green; */
+   
 }
 .product-img {
 
